...
        android:layout_above="@+id/activity_main_bottom_navigation"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_bottom_navigation"
        tools:ignore="UselessParent">


        <LinearLayout
            android:id="@+id/fillListingLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/activity_main_bottom_navigation"
            android:orientation="vertical">

            <Button
...
                android:layout_marginTop="@dimen/inter_space_extra_large"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_title_length">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_space_small"
                android:background="@drawable/boxed"
                android:importantForAutofill="no"
                android:hint="@string/title"
...
                android:layout_marginTop="@dimen/inter_space_small"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_description_length">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_space_small"
                android:background="@drawable/boxed"
                android:gravity="start|top"
                android:hint="@string/description"
...
                    android:layout_weight="0.01"
                    android:text="@string/currency"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="@dimen/default_textView_text_size" />

                <EditText
                    android:id="@+id/priceSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="0.01"
                    android:background="@drawable/boxed"
                    android:ems="7"
...
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/addMP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginTop="@dimen/button_shadow_margin"
                    android:layout_marginBottom="@dimen/button_shadow_margin"
                    android:layout_weight="0.01"
                    android:background="@drawable/rounded_corner_button_grey"
                    android:text="@string/add_MP"
                    android:textSize="@dimen/small_button_text_size" />
            </TableRow>

            <Button
                android:id="@+id/submitListing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/inter_space_extra_large"
                android:layout_marginBottom="@dimen/inter_space_extra_large"
                android:background="@drawable/rounded_corner_button_colored"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/loading"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/categorySelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone" />

        </LinearLayout>
...
