...
    <string name="verification_email_sent">Verification e-mail sent</string>
    <string name="verification_email_fail">Unable to send verification e-mail. A verification e-mail has probably been sent already. Check your inbox and try again in a few minutes</string>
    <string name="reload_fail">Unable to reload</string>
    <string name="contact_the_seller">Contact Seller</string>
    <string name="title">Listing Title</string>
    <string name="sales_overview">Sales overview</string>
    <string name="add_new_listing">Add new listing</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_required">You have to sign in to use that functionality</string>
    <string name="welcome_message">Welcome to PolyBazaar!</string>
    <string name="search">Search</string>
    <string name="latest_items"><b>Latest items</b></string>
...
    <string name="location_permission_denied">Permission Denied</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Permission Rationale Location</string>
    <string name="my_location">Find my location</string>
    <string name="add_MP">Define A Meeting Point</string>
    <string name="change_MP">Change/Remove Meeting Point</string>
    <string name="submit_listing">Submit Listing</string>
    <string name="see_MP">See Meeting Point</string>
    <string name="confirm_MP">Validate</string>
    <string name="MP_removed">Meeting Point removed</string>
    <string name="MP_set">Meeting Point set</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="move_first">Set As Main Image</string>
    <string name="rotate">Rotate Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="invalid_first_name">Please enter a valid first name</string>
    <string name="invalid_last_name">Please enter a valid last name</string>
    <string name="invalid_current_password">Current password incorrect</string>
    <string name="password_updated">Your password has been updated</string>
    <string name="profile_updated">Your profile has been updated</string>
    <string name="MP_ok">Meeting Point defined</string>
    <string name="MP_nok">Meeting Point not defined</string>
    <string name="location_unavailable">Location services are unavailable</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="remove_favorites">Remove from favorites</string>
    <string name="unable_load_image">Unable to load image</string>
    <string name="take_picture_fail">Unable to take picture</string>
    <string name="edit">Edit</string>
    <string name="incorrect_fields">One or more fields are missing</string>
    <string name="default_spinner_text">Select category…</string>
    <string name="object_not_found">This listing was deleted</string>
    <string name="search_title">Search listings</string>
    <string name="search_hint">Search listings</string>
    <string name="no_search_results">No matching results for:</string>
...
