...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginEnd="@dimen/inter_space_large"
                android:layout_marginTop="40dp"
                android:background="@drawable/boxed"
...
                android:maxLines="1"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_space_large"
                android:layout_marginEnd="@dimen/inter_space_large"
                android:layout_marginTop="@dimen/general_margin"
                android:background="@drawable/boxed"
...
                android:maxLines="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/button_shadow_margin"
                android:layout_marginTop="@dimen/inter_space_large"
                android:onClick="submit"
...
